--- a/cssCheatSheet/index.html
+++ b/cssCheatSheet/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Cheat sheet</title>
+    <style type="text/css">
+    h2  {
+        color: blue;
+    }
+    </style>
 </head>
 <body>
-    <h1 style="color: red;">Hello world</h1>
+    <h1 style="color: red;">Inline css</h1>
+    <h2>Internal css</h2>
 </body>
 </html>
