--- a/cssCheatSheet/index.html
+++ b/cssCheatSheet/index.html
@@ -9,9 +9,11 @@
         color: blue;
     }
     </style>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
     <h1 style="color: red;">Inline css</h1>
     <h2>Internal css</h2>
+    <h3>External css</h3>
 </body>
 </html>
