color and font 1

--- a/cssCheatSheet/index.html
+++ b/cssCheatSheet/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-    <h1 style="color: red;">Inline css</h1>
-    <h2>Internal css</h2>
-    <h3>External css</h3>
+    <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci fugit necessitatibus fuga enim amet dolore iste ad neque soluta ipsa accusamus, nesciunt qui exercitationem eligendi sint quia, illo iure cum.</p>
 </body>
 </html>
