line-height margin

--- a/cssCheatSheet/index.html
+++ b/cssCheatSheet/index.html
@@ -12,7 +12,11 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci fugit necessitatibus fuga enim amet dolore iste ad neque soluta ipsa accusamus, nesciunt qui exercitationem eligendi sint quia, illo iure cum.</p>
+    <div class="container">
+        <div class="box-1">
+            <h1>Hello World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci fugit necessitatibus fuga enim amet dolore iste ad neque soluta ipsa accusamus, nesciunt qui exercitationem eligendi sint quia, illo iure cum.</p>
+        </div>
+    </div>
 </body>
 </html>
